# getting_tabular_data_from_pdf

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
builds/: gtdfp_run.bat
docs/source/: conf.py  fine_reader.rst  index.rst  recognition.rst  telebot.rst  tesseract.rst
sources/: main.py  settings.py
sources/fine_reader_module/: pywinauto_fr.py
sources/recognition_module/: pandas_work_with_file.py
sources/telegram_bot/: telebot_module.py
sources/tesseract_module/: ocr_tesseract.py
test/: test_gtdfp.py
test/temp_test/: test_excel.xlsx  test_excel_fr.xlsx
utils/: pydantic_settings_data_class.py
