[tool.poetry]
name = "getting-tabular-data-from-pdf"
version = "0.1.0"
description = ""
authors = ["V-Moskalenko <moskalenkovadim92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pywinauto = "^0.6.8"
pydantic-settings = "^2.0.3"
toml = "^0.10.2"
pytelegrambotapi = "^4.13.0"
pytesseract = "^0.3.10"
opencv-python = "^4.8.0.76"
pdf2image = "^1.16.3"
pandas = "^2.1.0"
openpyxl = "^3.1.2"
tendo = "^0.3.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
